<!-- Zander TODO add help cards -->
<RelativeLayout android:id="@+id/counter_activity_root_layout"
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.sebastianboyd.fitness.PushupCounterActivity">

    <!-- Zander TODO disable click sound when paused -->
    <Button android:id="@+id/counter_circle"
            style="@style/Button.Round.CounterCircle"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:elevation="8dp"
            android:onClick="togglePause"/>

    <TextView android:id="@+id/counter_ready_prompt"
              style="@style/Text.Label.CountReady"
              android:layout_above="@id/counter_circle"
              android:text="@string/counter_readyPrompt"/>

    <RelativeLayout android:id="@+id/paused_control_layout"
                    style="@style/BottomControlLayout">

        <ImageButton android:id="@+id/button_decrement"
                     style="@style/Button.Round.Small.LightGrey"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:contentDescription="@string/decrement"
                     android:onClick="decrementCount"
                     android:src="@drawable/ic_chevron_left"/>

        <ImageButton android:id="@+id/button_send_data"
                     style="@style/Button.Round.Small.Green"
                     android:layout_centerHorizontal="true"
                     android:contentDescription="@string/done"
                     android:onClick="sendData"
                     android:src="@drawable/ic_done"/>

        <ImageButton android:id="@+id/button_increment"
                     style="@style/Button.Round.Small.LightGrey"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentRight="true"
                     android:contentDescription="@string/increment"
                     android:onClick="incrementCount"
                     android:src="@drawable/ic_chevron_right"/>
    </RelativeLayout>

    <RelativeLayout android:id="@+id/resumed_control_layout"
                    style="@style/BottomControlLayout">

        <ImageButton android:id="@+id/button_reset"
                     style="@style/Button.Round.Small.DarkGrey"
                     android:layout_centerHorizontal="true"
                     android:contentDescription="@string/reset"
                     android:onClick="resetCount"
                     android:src="@drawable/ic_reset"
                     android:visibility="invisible"/>
    </RelativeLayout>

</RelativeLayout>
